1: Modify 'index-1.html' to add UI

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -6,7 +6,16 @@
 </head>
 
 <body>
-
+    <header>
+        <h1>Candy time!</h1>
+    </header>
+    <main>
+        <input id="children-input" type="text" placeholder="Number of children"><button type="submit">Submit</button>
+        <br><br>
+        <input id="candy-input" type="text" placeholder="Number of candies"><button type="submit">Submit</button>
+        <br><br>
+        <div id="candies"></div>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script.js"></script>
 </html>
