1: Modify js to add comments, modify html to restructure UI

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -10,10 +10,15 @@
         <h1>Candy time!</h1>
     </header>
     <main>
-        <input id="children-input" type="text" placeholder="Number of children"><button type="submit">Submit</button>
+        <label for="children-input">Number of Children:</label>
+        <br>
+        <input id="children-input" type="text" placeholder="Children">
         <br><br>
-        <input id="candy-input" type="text" placeholder="Number of candies"><button type="submit">Submit</button>
+        <label for="candy-input">Number of Candies:</label>
+        <br>
+        <input id="candy-input" type="text" placeholder="Candies">
         <br><br>
+        <button id="submit" type="submit">Submit</button>
         <div id="candies"></div>
     </main>
 </body>
