1: Modify html to change input type from text to number

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -12,11 +12,11 @@
     <main>
         <label for="children-input">Number of Children:</label>
         <br>
-        <input id="children-input" type="text" placeholder="Children">
+        <input id="children-input" type="number" placeholder="Children">
         <br><br>
         <label for="candy-input">Number of Candies:</label>
         <br>
-        <input id="candy-input" type="text" placeholder="Candies">
+        <input id="candy-input" type="number" placeholder="Candies">
         <br><br>
         <button id="submit" type="submit">Submit</button>
         <div id="candies"></div>
