1: Modify html and js to add UI functionality

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1>Candy time!</h1>
+        <h1>Candies</h1>
     </header>
     <main>
         <label for="children-input">Number of Children:</label>
@@ -19,8 +19,11 @@
         <input id="candy-input" type="number" placeholder="Candies">
         <br><br>
         <button id="submit" type="submit">Submit</button>
-        <div id="candies"></div>
+        <br>
+        <h3>Each child receives: <span id="portion"></span></h3>
+        <h3>Total candies eaten: <span id="candies"></span></h3>
+        <h3>Leftover candies: <span id="leftover"></span></h3>
     </main>
 </body>
-    <script type="text/javascript" src ="assets/js/script.js"></script>
+    <script type="text/javascript" src ="assets/js/script-1.js"></script>
 </html>
