--- a/challenge-2/index-2.html
+++ b/challenge-2/index-2.html
@@ -9,7 +9,23 @@
     <header>
         <h1>Deposit Profit</h1>
     </header>
-    <main></main>
+    <main>
+        <label for="deposit-input">Deposit ($):</label>
+        <br>
+        <input id="deposit-input" type="number" placeholder="Example: 100">
+        <br><br>
+        <label for="rate-input">Interest Rate (%):</label>
+        <br>
+        <input id="rate-input" type="number" placeholder="Example: 20">
+        <br><br>
+        <label for="threshold-input">Threshold ($):</label>
+        <br>
+        <input id="threshold-input" type="number" placeholder="Example: 170">
+        <br><br>
+        <button id="submit" type="submit">Submit</button>
+        <br>
+        <h3>Years to reach threshold: <span id="years"></span></h3>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-2.js"></script>
 </html>
