3: Modify html to structure UI

--- a/challenge-3/index-3.html
+++ b/challenge-3/index-3.html
@@ -9,7 +9,22 @@
     <header>
         <h1>Chunky Monkey</h1>
     </header>
-    <main></main>
+    <main>
+        <h3>Initial Array: <span id="array"></span></h3>
+        <label for="value-input">Add values to the array:</label>
+        <br>
+        <input id="value-input" type="text" placeholder="Insert anything">
+        <br><br>
+        <button id="submit-values" type="submit">Submit</button>
+        <br><br>
+        <label for="size-input">Size of grouped arrays:</label>
+        <br>
+        <input id="threshold-input" type="number" placeholder="Example: 170">
+        <br><br>
+        <button id="submit" type="submit">Submit</button>
+        <br>
+        <h3>New Two-Dimensional Array: <span id="2d-array"></span></h3>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-3.js"></script>
 </html>
