3: Modify html to edit size input

--- a/challenge-3/index-3.html
+++ b/challenge-3/index-3.html
@@ -19,7 +19,7 @@
         <br><br>
         <label for="size-input">Size of grouped arrays:</label>
         <br>
-        <input id="threshold-input" type="number" placeholder="Example: 170">
+        <input id="size-input" type="number" placeholder="Insert number">
         <br><br>
         <button id="submit" type="submit">Submit</button>
         <br>
