3: Modify html to add square brackets to rendered arrays

--- a/challenge-3/index-3.html
+++ b/challenge-3/index-3.html
@@ -10,7 +10,7 @@
         <h1>Chunky Monkey</h1>
     </header>
     <main>
-        <h3>Initial Array: <span id="array"></span></h3>
+        <h3>Initial Array: [<span id="array"></span>]</h3>
         <label for="value-input">Add values to the array:</label>
         <br>
         <input id="value-input" type="text" placeholder="Insert anything">
@@ -23,7 +23,7 @@
         <br><br>
         <button id="submit" type="submit">Submit</button>
         <br>
-        <h3>New Two-Dimensional Array: <span id="2d-array"></span></h3>
+        <h3>New Two-Dimensional Array: [<span id="2d-array"></span>]</h3>
     </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-3.js"></script>
