4: Modify html to structure UI

--- a/challenge-4/index-4.html
+++ b/challenge-4/index-4.html
@@ -9,7 +9,15 @@
     <header>
         <h1>Century From Year</h1>
     </header>
-    <main></main>
+    <main>
+        <label for="number-input">Year:</label>
+        <br>
+        <input id="number-input" type="number" placeholder="Insert year">
+        <br><br>
+        <button id="submit" type="submit">Submit</button>
+        <br>
+        <h3>Century: <span id="century"></span></h3>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-4.js"></script>
 </html>
