5: Modify html to structure UI

--- a/challenge-5/index-5.html
+++ b/challenge-5/index-5.html
@@ -9,7 +9,15 @@
     <header>
         <h1>Reverse A String</h1>
     </header>
-    <main></main>
+    <main>
+        <label for="string-input">Insert a string:</label>
+        <br>
+        <input id="string-input" type="text" placeholder="Insert words/characters">
+        <br><br>
+        <button id="submit" type="submit">Submit</button>
+        <br>
+        <h3>Reversed String: <span id="reversed-string"></span></h3>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-5.js"></script>
 </html>
