6: Modify html to structure UI

--- a/challenge-6/index-6.html
+++ b/challenge-6/index-6.html
@@ -9,7 +9,16 @@
     <header>
         <h1>Sort By Length</h1>
     </header>
-    <main></main>
+    <main>
+        <h3>Array of Strings: [<span id="string-array"></span>]</h3>
+        <label for="string-input">Add a string value to the array:</label>
+        <br>
+        <input id="string-input" type="text" placeholder="Insert words/characters">
+        <br><br>
+        <button id="submit" type="submit">Submit</button>
+        <br>
+        <h3>Sorted String: <span id="sorted-string"></span></h3>
+    </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-6.js"></script>
 </html>
