--- a/challenge-6/index-6.html
+++ b/challenge-6/index-6.html
@@ -17,7 +17,7 @@
         <br><br>
         <button id="submit" type="submit">Submit</button>
         <br>
-        <h3>Sorted String: <span id="sorted-string"></span></h3>
+        <h3>Sorted String: <span id="sorted-array"></span></h3>
     </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-6.js"></script>
