6: Modify html to add 'Sort Array' btn

--- a/challenge-6/index-6.html
+++ b/challenge-6/index-6.html
@@ -14,9 +14,9 @@
         <label for="string-input">Add a string value to the array:</label>
         <br>
         <input id="string-input" type="text" placeholder="Insert words/characters">
+        <button id="submit-string" type="submit">Add to Array</button>
         <br><br>
-        <button id="submit" type="submit">Submit</button>
-        <br>
+        <button id="submit" type="submit">Sort Array</button>
         <h3>Sorted Array: [<span id="sorted-array"></span>]</h3>
     </main>
 </body>
