7: Modify html to edit text

--- a/challenge-7/index-7.html
+++ b/challenge-7/index-7.html
@@ -14,11 +14,11 @@
             Vowels = 1pt<br>
             Consonants = 2pts
         </h3>
-        <label for="string-input">Insert lowercase English characters: </label>
+        <label for="string-input">Insert characters: </label>
         <br>
         <input id="string-input" type="text" placeholder="Insert string">
         <button id="submit" type="submit">Submit</button>
-        <p>*Note: Do not input uppercase characters, special characters or numbers</p>
+        <p>*Note: Do not input special characters or numbers</p>
         <h3>Sum: <span id="sum"></span></h3>
     </main>
 </body>
