7: Modify html to edit text #2

--- a/challenge-7/index-7.html
+++ b/challenge-7/index-7.html
@@ -17,9 +17,9 @@
         <label for="string-input">Insert characters: </label>
         <br>
         <input id="string-input" type="text" placeholder="Insert string">
-        <button id="submit" type="submit">Submit</button>
+        <button id="submit" type="submit">Score</button>
         <p>*Note: Do not input special characters or numbers</p>
-        <h3>Sum: <span id="sum"></span></h3>
+        <h3>Total Points: <span id="sum"></span></h3>
     </main>
 </body>
     <script type="text/javascript" src ="assets/js/script-7.js"></script>
