8: Modify html to add dice dot divs

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -7,7 +7,39 @@
 
 <body>
     <div class="dice">
-        <div class="dot"></div>
+        <div id="one">
+            <div class="dot middle"></div>
+        </div>
+        <div id="two">
+            <div class="dot top-left"></div>
+            <div class="dot bottom-right"></div>
+        </div>
+        <div id="three">
+            <div class="dot top-left"></div>
+            <div class="dot middle"></div>
+            <div class="dot bottom-right"></div>
+        </div>
+        <div id="four">
+            <div class="dot top-left"></div>
+            <div class="dot top-right"></div>
+            <div class="dot bottom-left"></div>
+            <div class="dot bottom-right"></div>
+        </div>
+        <div id="five">
+            <div class="dot top-left"></div>
+            <div class="dot top-right"></div>
+            <div class="dot middle"></div>
+            <div class="dot bottom-left"></div>
+            <div class="dot bottom-right"></div>
+        </div>
+        <div id="six">
+            <div class="dot top-left"></div>
+            <div class="dot top-right"></div>
+            <div class="dot middle-left"></div>
+            <div class="dot middle-right"></div>
+            <div class="dot bottom-left"></div>
+            <div class="dot bottom-right"></div>
+        </div>
     </div>
 
     <script src="assets/js/script-8.js"></script>
