8: Modify script & html to add .hide selector

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -7,25 +7,25 @@
 
 <body>
     <div class="dice">
-        <div id="one">
+        <div id="one" class="hide">
             <div class="dot middle"></div>
         </div>
-        <div id="two">
+        <div id="two" class="hide">
             <div class="dot top-left"></div>
             <div class="dot bottom-right"></div>
         </div>
-        <div id="three">
+        <div id="three" class="hide">
             <div class="dot top-left"></div>
             <div class="dot middle"></div>
             <div class="dot bottom-right"></div>
         </div>
-        <div id="four">
+        <div id="four" class="hide">
             <div class="dot top-left"></div>
             <div class="dot top-right"></div>
             <div class="dot bottom-left"></div>
             <div class="dot bottom-right"></div>
         </div>
-        <div id="five">
+        <div id="five" class="hide">
             <div class="dot top-left"></div>
             <div class="dot top-right"></div>
             <div class="dot middle"></div>
