8: Modify html & css to reorganise dot divs

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -7,39 +7,13 @@
 
 <body>
     <div class="dice">
-        <div id="one" class="hide">
-            <div class="dot middle"></div>
-        </div>
-        <div id="two" class="hide">
-            <div class="dot top-left"></div>
-            <div class="dot bottom-right"></div>
-        </div>
-        <div id="three" class="hide">
-            <div class="dot top-left"></div>
-            <div class="dot middle"></div>
-            <div class="dot bottom-right"></div>
-        </div>
-        <div id="four" class="hide">
-            <div class="dot top-left"></div>
-            <div class="dot top-right"></div>
-            <div class="dot bottom-left"></div>
-            <div class="dot bottom-right"></div>
-        </div>
-        <div id="five" class="hide">
-            <div class="dot top-left"></div>
-            <div class="dot top-right"></div>
-            <div class="dot middle"></div>
-            <div class="dot bottom-left"></div>
-            <div class="dot bottom-right"></div>
-        </div>
-        <div id="six">
-            <div class="dot top-left"></div>
-            <div class="dot top-right"></div>
-            <div class="dot middle-left"></div>
-            <div class="dot middle-right"></div>
-            <div class="dot bottom-left"></div>
-            <div class="dot bottom-right"></div>
-        </div>
+        <div id="top-left" class="dot two three four five six"></div>
+        <div id="top-right" class="dot four five six"></div>
+        <div id="middle-left" class="dot six"></div>
+        <div id="middle" class="dot one three five"></div>
+        <div id="middle-right" class="dot six"></div>
+        <div id="bottom-left" class="dot four five six"></div>
+        <div id="bottom-right" class="dot two three four five six"></div>
     </div>
 
     <script src="assets/js/script-8.js"></script>
