8: Modify js to add function for rolling dice

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -8,13 +8,13 @@
 
 <body>
     <div class="dice">
-        <div id="top-left" class="dot two three four five six"></div>
-        <div id="top-right" class="dot four five six"></div>
-        <div id="middle-left" class="dot six"></div>
-        <div id="middle" class="dot one three five"></div>
-        <div id="middle-right" class="dot six"></div>
-        <div id="bottom-left" class="dot four five six"></div>
-        <div id="bottom-right" class="dot two three four five six"></div>
+        <div id="top-left" class="dot two three four five six hide"></div>
+        <div id="top-right" class="dot four five six hide"></div>
+        <div id="middle-left" class="dot six hide"></div>
+        <div id="middle" class="dot one three five hide"></div>
+        <div id="middle-right" class="dot six hide"></div>
+        <div id="bottom-left" class="dot four five six hide"></div>
+        <div id="bottom-right" class="dot two three four five six hide"></div>
     </div>
 
     <script src="assets/js/script-8.js"></script>
