8: Modify js, html & css to add event listener to dice

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="dice">
+    <div id="dice">
         <div id="top-left" class="dot two three four five six hide"></div>
         <div id="top-right" class="dot four five six hide"></div>
         <div id="middle-left" class="dot six hide"></div>
