8: Modify html, script & css to display number of dice roll

--- a/challenge-8/index-8.html
+++ b/challenge-8/index-8.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="dice-number"></div>
+    <div id="dice-number">Click the dice</div>
     <div id="dice">
         <div id="top-left" class="dot two three four five six hide"></div>
         <div id="top-right" class="dot four five six hide"></div>
