10: Modify html to structure UI

--- a/challenge-10/index-10.html
+++ b/challenge-10/index-10.html
@@ -8,8 +8,22 @@
 <body>
     <header>
         <h1>Adjacent Elements Product</h1>
+        <p>
+            All adjacent numbers in your array will be multiplied and the largest product will be returned.
+            <br><br>
+            <strong>Example: </strong> The result of the array [1, 3, 5, -2, 9, 1] will be 15 (3 × 5).
+        </p>
     </header>
-    <main></main>
+    <main>
+        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
+        <label for="num">Array values: </label>
+        <br>
+        <input id="num" type="number" placeholder="Input whole number">
+        <button id="submit-num" type="submit">Add to Array</button>
+        <br><br>
+        <button id="submit" type="submit">Find Largest Product</button>
+        <h3>Largest product: <span id="largest-product"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-10.js"></script>
 </body>
     
