12: Modify html to structure UI

--- a/challenge-12/index-12.html
+++ b/challenge-12/index-12.html
@@ -7,9 +7,16 @@
 
 <body>
     <header>
-        <h1>Valid Time</h1>        
+        <h1>Valid Time</h1> 
     </header>
-    <main></main>
+    <main>
+        <label for="time">24-hr time: </label>
+        <br>
+        <input id="time" type="string" placeholder="Ex: 23:21">
+        <button id="submit" type="submit">Validate Time</button>
+        <p>*Note: Input should be in the format: 00:00</p>
+        <h3>Your inputted time is: <span id="validator"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-12.js"></script>
 </body>
     
