13: Modify html to structure UI

--- a/challenge-13/index-13.html
+++ b/challenge-13/index-13.html
@@ -9,7 +9,19 @@
     <header>
         <h1>Extract Each Kth</h1> 
     </header>
-    <main></main>
+    <main>
+        <h3>Array of numbers: [<span id="num-array"></span>]</h3>
+        <label for="num">Add value to array: </label>
+        <br>
+        <input id="num" type="number" placeholder="Insert number">
+        <button id="add" type="submit">Add to Array</button>
+        <br><br>
+        <label for="k">k: </label>
+        <br>
+        <input id="k" type="number" placeholder="Insert number">
+        <button id="submit" type="submit">Extract Numbers</button>
+        <h3>New array: [<span id="extracted-array"></span>]</h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-13.js"></script>
 </body>
     
