14: Modify html to structure UI

--- a/challenge-14/index-14.html
+++ b/challenge-14/index-14.html
@@ -8,8 +8,22 @@
 <body>
     <header>
         <h1>Maximal Adjacent Difference</h1> 
+        <p>
+            Find the maximal difference of adjacent numbers in your array.
+            <br><br>
+            <strong>Example: </strong> The array [2, 9, 1, 0, -12] will result in 12, as the largest difference between any of the adjacent numbers is 12 (0 and -12).
+        </p>
     </header>
-    <main></main>
+    <main>
+        <h3>Array of integers: [<span id="integer-array"></span>]</h3>
+        <label for="integer">Add value to array: </label>
+        <br>
+        <input id="integer" type="number" placeholder="Insert whole number">
+        <button id="add" type="submit">Add to Array</button>
+        <br><br>
+        <button id="submit" type="submit">Find Maximal Difference</button>
+        <h3>Maximal adjacent difference: [<span id="maximal-diff"></span>]</h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-14.js"></script>
 </body>
     
