14: Modify js & html to make small fixes

--- a/challenge-14/index-14.html
+++ b/challenge-14/index-14.html
@@ -22,7 +22,7 @@
         <button id="add" type="submit">Add to Array</button>
         <br><br>
         <button id="submit" type="submit">Find Maximal Difference</button>
-        <h3>Maximal adjacent difference: [<span id="maximal-diff"></span>]</h3>
+        <h3>Maximal adjacent difference: <span id="maximal-diff"></span></h3>
     </main>
     <script type="text/javascript" src ="assets/js/script-14.js"></script>
 </body>
