--- a/challenge-15/index-15.html
+++ b/challenge-15/index-15.html
@@ -8,7 +8,7 @@
 <body>
     
     <div class="container">
-        <img src="assets/images/previous.svg" id="previous" alt="previous image">
+        <img src="assets/images/previous.svg" id="previous" class="disabled" alt="previous image">
         <div class="gallery-wrapper">
             <div id="gallery">
                 <img class="card current" src="assets/images/presents.jpg" alt="Christmas presents">
