16: Modify html to structure UI

--- a/challenge-16/index-16.html
+++ b/challenge-16/index-16.html
@@ -9,7 +9,13 @@
     <header>
         <h1>Insert Dashes</h1> 
     </header>
-    <main></main>
+    <main>
+        <label for="input">Type in anything: </label>
+        <br>
+        <input id="input" type="text" placeholder="Insert text">
+        <button id="submit" type="submit">Add Dashes</button>
+        <h3>New text: <span id="new-text"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-16.js"></script>
 </body>
     
