16: Modify html to add note below input

--- a/challenge-16/index-16.html
+++ b/challenge-16/index-16.html
@@ -14,6 +14,7 @@
         <br>
         <input id="input" type="text" placeholder="Insert text">
         <button id="submit" type="submit">Add Dashes</button>
+        <p>*Note: Adjacent spaces will be converted to one space</p>
         <h3>New text: <span id="new-text"></span></h3>
     </main>
     <script type="text/javascript" src ="assets/js/script-16.js"></script>
