16: Modify js to add solution, modify html to fix typo

--- a/challenge-17/index-17.html
+++ b/challenge-17/index-17.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1>Different Symbols Naivce</h1> 
+        <h1>Different Symbols Naive</h1> 
     </header>
     <main></main>
     <script type="text/javascript" src ="assets/js/script-17.js"></script>
