17: Modify html to structure UI, *NOTE: typo in previous commit msg (16 -> 17)

--- a/challenge-17/index-17.html
+++ b/challenge-17/index-17.html
@@ -9,7 +9,13 @@
     <header>
         <h1>Different Symbols Naive</h1> 
     </header>
-    <main></main>
+    <main>
+        <label for="input">Type in anything: </label>
+        <br>
+        <input id="input" type="text" placeholder="Insert text">
+        <button id="submit" type="submit">Count Different Characters</button>
+        <h3>Number of different characters: <span id="chars"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-17.js"></script>
 </body>
     
