--- a/challenge-18/index-18.html
+++ b/challenge-18/index-18.html
@@ -8,8 +8,38 @@
 <body>
     <header>
         <h1>Array Previous Less</h1> 
+        <p>
+            Create a new array of integers from your initial array of integers.
+            <br><br>
+            Each integer, <em>i</em>, in your array will be compared with the integers that come before it.
+            The last number (from the left) that is smaller than integer <em>i</em> will take integer <em>i's</em> position in a new array.
+            If there are no smaller integers to the left of integer <em>i</em>, -1 will take its place in the new array.
+            <br><br>
+            <strong>Example: </strong>The array [3, 5, 2, 4, 5] will return [-1, 3, -1, 2, 4].
+            <br>
+            <strong>Explanation: </strong>
+            <br>
+            - 3 has nothing to the left of it, so -1 takes its place in the returned array.
+            <br>
+            - 5 is larger than 3, so the second integer in the new array is 3. 
+            <br>
+            - There are no integers to the left of 2 that are smaller than it, so -1 takes its place in the new array.
+            <br>
+            - 3 and 2 are both smaller than 4, however, 2 is the last from the left, so 2 is the fourth integer in the new array.
+            <br>
+            - 3, 2 and 4 are all smaller than 5, however, 4 is the last from the left, so 4 is the last integer in the new array.
+        </p>
     </header>
-    <main></main>
+    <main>
+        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
+        <label for="input">Add a value to the array: </label>
+        <br>
+        <input id="input" type="number" placeholder="Insert whole number">
+        <button id="submit-input" type="submit">Add to Array</button>
+        <br><br>
+        <button id="submit" type="submit">New Array</button>
+        <h3>New Array: [<span id="new-arr"></span>]</h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-18.js"></script>
 </body>
     
