18: Modify html to add note beneath input

--- a/challenge-18/index-18.html
+++ b/challenge-18/index-18.html
@@ -38,6 +38,7 @@
         <button id="submit-input" type="submit">Add to Array</button>
         <br><br>
         <button id="submit" type="submit">New Array</button>
+        <p>*Note: Numbers with decimal places will be rounded down</p>
         <h3>New Array: [<span id="new-arr"></span>]</h3>
     </main>
     <script type="text/javascript" src ="assets/js/script-18.js"></script>
