19: Modify html to structure UI

--- a/challenge-19/index-19.html
+++ b/challenge-19/index-19.html
@@ -8,8 +8,23 @@
 <body>
     <header>
         <h1>Alphabet Subsequence</h1> 
+        <p>
+            <strong>String criteria:</strong>
+            <br>
+            1. String must only contain alphabetical characters
+            <br>
+            2. Characters can only appear once in the string
+            <br>
+            3. Characters must be in alphabetic order
+        </p>
     </header>
-    <main></main>
+    <main>
+        <label for="input">String of alphabetic characters: </label>
+        <br>
+        <input id="input" type="text" placeholder="Insert string">
+        <button id="submit" type="submit">Validate String</button>
+        <h3><span id="validator"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-19.js"></script>
 </body>
     
