20: Modify html to structure UI

--- a/challenge-20/index-20.html
+++ b/challenge-20/index-20.html
@@ -9,7 +9,14 @@
     <header>
         <h1>Domain Type</h1> 
     </header>
-    <main></main>
+    <main>
+        <h3>List of domain names: [<span id="domain-arr"></span>]</h3>
+        <label for="input">Add domain name (website URL): </label>
+        <br>
+        <input id="input" type="text" placeholder="Insert domain name">
+        <button id="submit" type="submit">Check Domain Type</button>
+        <h3>Domain name types: [<span id="type-arr"></span>]</h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-20.js"></script>
 </body>
     
