20: Modify js to add event listener for 'Add Domain Name' btn

--- a/challenge-20/index-20.html
+++ b/challenge-20/index-20.html
@@ -14,6 +14,8 @@
         <label for="input">Add domain name (website URL): </label>
         <br>
         <input id="input" type="text" placeholder="Insert domain name">
+        <button id="submit-domain" type="submit">Add Domain Name</button>
+        <br><br>
         <button id="submit" type="submit">Check Domain Type</button>
         <h3>Domain name types: [<span id="type-arr"></span>]</h3>
     </main>
