21: Modify html to structure UI

--- a/challenge-21/index-21.html
+++ b/challenge-21/index-21.html
@@ -8,8 +8,29 @@
 <body>
     <header>
         <h1>Sum of 2</h1> 
+        <p>
+            See whether any two numbers, one from Array 1 and one from Array 2, when summed, result in your inputted sum value. 
+        </p>
     </header>
-    <main></main>
+    <main>
+        <h3>Integer Array 1: [<span id="arr1"></span>]</h3>
+        <label for="num1">Add integer to Array 1: </label>
+        <br>
+        <input id="num1" type="number" placeholder="Insert whole number">
+        <button id="submit-num1" type="submit">Add to Array 1</button>
+        <br>
+        <h3>Integer Array 2: [<span id="arr2"></span>]</h3>
+        <label for="num2">Add integer to Array 2: </label>
+        <br>
+        <input id="num2" type="number" placeholder="Insert whole number">
+        <button id="submit-num2" type="submit">Add to Array 2</button>
+        <br><br>
+        <label for="value">Sum value: </label>
+        <br>
+        <input id="value" type="number" placeholder="Insert whole number">
+        <button id="submit" type="submit">Check Sums</button>
+        <h3><span id="sum-checker"></span></h3>
+    </main>
     <script type="text/javascript" src ="assets/js/script-21.js"></script>
 </body>
     
