21: Modify html & js to add 'Clear Array' btns

--- a/challenge-21/index-21.html
+++ b/challenge-21/index-21.html
@@ -18,12 +18,16 @@
         <br>
         <input id="num1" type="number" placeholder="Insert whole number">
         <button id="submit-num1" type="submit">Add to Array 1</button>
+        <br><br>
+        <button id="clear-arr1" type="submit">Clear Array 1</button>
         <br>
         <h3>Integer Array 2: [<span id="arr2"></span>]</h3>
         <label for="num2">Add integer to Array 2: </label>
         <br>
         <input id="num2" type="number" placeholder="Insert whole number">
         <button id="submit-num2" type="submit">Add to Array 2</button>
+        <br><br>
+        <button id="clear-arr2" type="submit">Clear Array 2</button>
         <br><br>
         <label for="value">Sum value: </label>
         <br>
