24: Modify html, css & js to add 'Replay' btn

--- a/challenge-24/index-24.html
+++ b/challenge-24/index-24.html
@@ -19,6 +19,7 @@
     </div>
     <button id="buttonPressed">STOP</button>
     <h4 id="result"></h4>
+    <button id="replay" class="hide">REPLAY</button>
     <script src="assets/js/script-24.js"></script>
 </body>
 
