CSS: Experimental styling

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Candies</h1>
+        <h1>Jessica's JavaScriptmas Challenge</h1>
     </header>
     <main>
         <label for="children-input">Number of Children:</label>
