1: Modify html to organise content

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>JavaScriptmas | Day 1</title>
+    <title>JavaScriptmas | Challenge 1</title>
 </head>
 
 <body>
     <header>
-        <h1>Jessica's JavaScriptmas Challenge</h1>
     </header>
     <main>
+        <h1>Candies</h1>
+        <br>
+        <h2>Description</h2>
+        <p>
+            Find out how many candies each child receives if a certain number of candies is divided <em>equally</em> amongst them.
+        </p>
+        <br>
         <label for="children-input">Number of Children:</label>
         <br>
         <input id="children-input" type="number" placeholder="Children">
@@ -23,9 +29,11 @@
         <input id="candy-input" type="number" placeholder="Candies">
         <br><br>
         <button id="submit" type="submit">Submit</button>
-        <br>
+        <br><br>
         <h3>Each child receives: <span id="portion"></span></h3>
+        <br>
         <h3>Total candies eaten: <span id="candies"></span></h3>
+        <br>
         <h3>Leftover candies: <span id="leftover"></span></h3>
     </main>
     <script type="text/javascript" src="assets/js/script-1.js"></script>
