1/CSS: Modify html to add text, modify css to apply background styling

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -17,18 +17,19 @@
     <main>
         <h1>Candies</h1>
         <br>
-        <h2>Description</h2>
         <p>
             Find out how many candies each child receives if a certain number of candies is divided <em>equally</em> amongst them.
+            <br><br>
+            Individual candies cannot be divided, so there may be leftovers.
         </p>
         <br>
         <label for="children-input">Number of Children:</label>
         <br>
-        <input id="children-input" type="number" placeholder="Children">
+        <input id="children-input" type="number" placeholder="Number">
         <br><br>
         <label for="candy-input">Number of Candies:</label>
         <br>
-        <input id="candy-input" type="number" placeholder="Candies">
+        <input id="candy-input" type="number" placeholder="Number">
         <br><br>
         <button id="submit" type="submit">Submit</button>
         <br><br>
