1/CSS: Modify html and css to add styling to input and btns

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -31,7 +31,7 @@
         <br>
         <input id="candy-input" type="number" placeholder="Number">
         <br><br>
-        <button id="submit" type="submit">Submit</button>
+        <button id="submit" class="input-width-btn" type="submit">Submit</button>
         <br><br>
         <h3>Each child receives: <span id="portion"></span></h3>
         <br>
