--- a/challenge-2/index-2.html
+++ b/challenge-2/index-2.html
@@ -2,14 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 2</title>
 </head>
 
 <body>
     <header>
-        <h1>Deposit Profit</h1>
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="index-2.html">2</a>
     </header>
     <main>
+        <h1>Deposit Profit</h1>
+        <br>
+        <p>
+            Find out how many years it will take for a certain amount of money (deposit) to reach a certain threshold given an annual interest rate.
+        </p>
+        <br>
         <label for="deposit-input">Deposit ($):</label>
         <br>
         <input id="deposit-input" type="number" placeholder="Example: 100">
@@ -22,10 +35,10 @@
         <br>
         <input id="threshold-input" type="number" placeholder="Example: 170">
         <br><br>
-        <button id="submit" type="submit">Submit</button>
-        <br>
+        <button id="submit" class="input-width-btn" type="submit">Submit</button>
+        <br><br>
         <h3>Years to reach threshold: <span id="years"></span></h3>
     </main>
+    <script type="text/javascript" src="assets/js/script-2.js"></script>
 </body>
-    <script type="text/javascript" src ="assets/js/script-2.js"></script>
 </html>
