1/2: Modify html to change input placeholder text & span text

--- a/challenge-2/index-2.html
+++ b/challenge-2/index-2.html
@@ -47,19 +47,19 @@
         <br>
         <label for="deposit-input">Deposit ($):</label>
         <br>
-        <input id="deposit-input" type="number" placeholder="Example: 100">
+        <input id="deposit-input" type="number" placeholder="e.g. 100">
         <br><br>
         <label for="rate-input">Interest Rate (%):</label>
         <br>
-        <input id="rate-input" type="number" placeholder="Example: 20">
+        <input id="rate-input" type="number" placeholder="e.g. 20">
         <br><br>
         <label for="threshold-input">Threshold ($):</label>
         <br>
-        <input id="threshold-input" type="number" placeholder="Example: 170">
+        <input id="threshold-input" type="number" placeholder="Ex: 170">
         <br><br>
         <button id="submit" class="input-width-btn" type="submit">Submit</button>
         <br><br>
-        <h3>Years to reach threshold: <span id="years"></span></h3>
+        <h3>Years to reach threshold: <span id="years">e.g. 3</span></h3>
     </main>
     <script type="text/javascript" src="assets/js/script-2.js"></script>
 </body>
