--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -49,19 +49,19 @@
         <br>
         <label for="children-input">Number of Children:</label>
         <br>
-        <input id="children-input" type="number" placeholder="Number">
+        <input id="children-input" type="number" placeholder="e.g. 5">
         <br><br>
         <label for="candy-input">Number of Candies:</label>
         <br>
-        <input id="candy-input" type="number" placeholder="Number">
+        <input id="candy-input" type="number" placeholder="e.g. 23">
         <br><br>
         <button id="submit" class="input-width-btn" type="submit">Submit</button>
         <br><br>
-        <h3>Each child receives: <span id="portion"></span></h3>
+        <h3>Each child receives: <span id="portion">e.g. 4 candies</span></h3>
         <br>
-        <h3>Total candies eaten: <span id="candies"></span></h3>
+        <h3>Total candies eaten: <span id="candies">e.g. 20</span></h3>
         <br>
-        <h3>Leftover candies: <span id="leftover"></span></h3>
+        <h3>Leftover candies: <span id="leftover">e.g. 3</span></h3>
     </main>
     <script type="text/javascript" src="assets/js/script-1.js"></script>
 </body>
