--- a/challenge-3/index-3.html
+++ b/challenge-3/index-3.html
@@ -2,29 +2,65 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 3</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 3</title>
 </head>
 
 <body>
     <header>
-        <h1>Chunky Monkey</h1>
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="index-3.html">3</a>
+        <a href="../challenge-4/index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="../challenge-11/index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="../challenge-18/index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="../challenge-21/index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="../challenge-24/index-24.html">24</a>
     </header>
     <main>
-        <h3>Initial Array: [<span id="array"></span>]</h3>
-        <label for="value-input">Add values to the array:</label>
+        <h1>Chunky Monkey</h1>
         <br>
-        <input id="value-input" type="text" placeholder="Insert anything">
-        <br><br>
-        <button id="submit-values" type="submit">Submit</button>
+        <p>
+            Create an initial array of items (numbers, characters, words, and sentences are all acceptable array items).
+            Then, specify a size to group your initial array items into, to create a new two-dimensional array (an array of arrays).
+        </p>
+        <br>
+        <h3>Initial Array: [<span id="array"></span>]</h3>
+        <br>
+        <label for="value-input">Add items to the initial array:</label>
+        <br>
+        <input id="value-input" type="text" placeholder="e.g. 21 or hello">
+        <button id="submit-values" class="input-width-btn" type="submit">Add to Initial Array</button>
         <br><br>
         <label for="size-input">Size of grouped arrays:</label>
         <br>
-        <input id="size-input" type="number" placeholder="Insert number">
+        <input id="size-input" type="number" placeholder="e.g. 3">
         <br><br>
-        <button id="submit" type="submit">Submit</button>
-        <br>
+        <button id="submit" class="input-width-btn" type="submit">Create New Array</button>
+        <br><br><br>
         <h3>New Two-Dimensional Array: [<span id="2d-array"></span>]</h3>
     </main>
+    <script type="text/javascript" src="assets/js/script-3.js"></script>
 </body>
-    <script type="text/javascript" src ="assets/js/script-3.js"></script>
 </html>
