--- a/challenge-2/index-2.html
+++ b/challenge-2/index-2.html
@@ -45,20 +45,22 @@
             Find out how many years it will take for a certain amount of money (deposit) to reach a certain threshold given an annual interest rate.
         </p>
         <br>
-        <label for="deposit-input">Deposit ($):</label>
-        <br>
-        <input id="deposit-input" type="number" placeholder="e.g. 100">
+        <form>
+            <label for="deposit-input">Deposit ($):</label>
+            <br>
+            <input id="deposit-input" type="number" placeholder="e.g. 100">
+            <br><br>
+            <label for="rate-input">Interest Rate (%):</label>
+            <br>
+            <input id="rate-input" type="number" placeholder="e.g. 20">
+            <br><br>
+            <label for="threshold-input">Threshold ($):</label>
+            <br>
+            <input id="threshold-input" type="number" placeholder="Ex: 170">
+            <br><br>
+            <button id="submit" class="input-width-btn" type="submit">Submit</button>
+        </form>
         <br><br>
-        <label for="rate-input">Interest Rate (%):</label>
-        <br>
-        <input id="rate-input" type="number" placeholder="e.g. 20">
-        <br><br>
-        <label for="threshold-input">Threshold ($):</label>
-        <br>
-        <input id="threshold-input" type="number" placeholder="Ex: 170">
-        <br><br>
-        <button id="submit" class="input-width-btn" type="submit">Submit</button>
-        <br><br><br>
         <h3>Years to reach threshold: <span id="years">e.g. 3</span></h3>
     </main>
     <script type="text/javascript" src="assets/js/script-2.js"></script>
