1: Modify html to put inputs into form, modify js to prevent default on btn click

--- a/challenge-1/index-1.html
+++ b/challenge-1/index-1.html
@@ -47,16 +47,18 @@
             Individual candies cannot be divided, so there may be leftovers.
         </p>
         <br>
-        <label for="children-input">Number of Children:</label>
-        <br>
-        <input id="children-input" type="number" placeholder="e.g. 5">
+        <form>
+            <label for="children-input">Number of Children:</label>
+            <br>
+            <input id="children-input" type="number" placeholder="e.g. 5">
+            <br><br>
+            <label for="candy-input">Number of Candies:</label>
+            <br>
+            <input id="candy-input" type="number" placeholder="e.g. 23">
+            <br><br>
+            <button id="submit" class="input-width-btn" type="submit">Submit</button>
+        </form>
         <br><br>
-        <label for="candy-input">Number of Candies:</label>
-        <br>
-        <input id="candy-input" type="number" placeholder="e.g. 23">
-        <br><br>
-        <button id="submit" class="input-width-btn" type="submit">Submit</button>
-        <br><br><br>
         <h3>Each child receives: <span id="portion">e.g. 4 candies</span></h3>
         <br>
         <h3>Total candies eaten: <span id="candies">e.g. 20</span></h3>
