--- a/challenge-4/index-4.html
+++ b/challenge-4/index-4.html
@@ -2,22 +2,58 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 4</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 4</title>
 </head>
 
 <body>
     <header>
-        <h1>Century From Year</h1>
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="../challenge-3/index-3.html">3</a>
+        <a href="index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="../challenge-11/index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="../challenge-18/index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="../challenge-21/index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="../challenge-24/index-24.html">24</a>
     </header>
     <main>
-        <label for="number-input">Year:</label>
+        <h1>Century From Year</h1>
         <br>
-        <input id="number-input" type="number" placeholder="Insert year">
-        <br><br>
-        <button id="submit" type="submit">Submit</button>
+        <p>
+            Input a year (AD) and find out what century it belongs to.
+        </p>
         <br>
-        <h3>Century: <span id="century"></span></h3>
+        <form>
+            <label for="number-input">Year:</label>
+            <br>
+            <input id="number-input" type="number" placeholder="e.g. 1756">
+            <button id="submit" type="submit">Submit</button>
+        </form>
+        <br>
+        <h3>Century: <span id="century">e.g. 18th</span></h3>
     </main>
+    <script type="text/javascript" src="assets/js/script-4.js"></script>
 </body>
-    <script type="text/javascript" src ="assets/js/script-4.js"></script>
 </html>
