--- a/challenge-11/index-11.html
+++ b/challenge-11/index-11.html
@@ -2,42 +2,82 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 11</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 11</title>
 </head>
 
 <body>
     <header>
-        <h1>Avoid Obstacles</h1>        
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="../challenge-3/index-3.html">3</a>
+        <a href="../challenge-4/index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="../challenge-18/index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="../challenge-21/index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="../challenge-24/index-24.html">24</a>
+    </header>
+    <main>
+        <h1>Avoid Obstacles</h1>  
+        <br>      
         <p>
-            Each number in your array represents the coordinates of an obstacle on a straight line.
+            Create an array of integers. Each number in your array represents the coordinates of an obstacle on a straight line.
             <br><br>
             Find the smallest number that can 'jump' through your array without hitting an obstacle.
             <br><br>
             <strong>Example: </strong> The result of the array [5, 3, 6, 7, 9] would be 4.
             <br><br>
-            <strong>Explanation: </strong>
-                <br>
-                A jump of 1 creates the jump sequence: 1, 2, 3, 4, 5, etc., meaning it will hit all obstacles.
-                <br>
-                A jump of 2 creates the sequence: 2, 4, 6, 8, 10, etc, meaning it hits the obstacle at coordinate 6.
-                <br>
-                A jump of 3 creates the sequence: 3, 6, 9, 12, 15, etc, meaning it hits the obtacles at coordintes 3, 6, and 9.
-                <br>
-                A jump of 4 creates the sequence: 4, 8, 12, 16, 18, etc, meaning it does not hit any of the obstacles.
-
         </p>
-    </header>
-    <main>
-        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
-        <label for="num">Array values: </label>
+        <a href="#">Click for step-by-step explanation</a>
+        <p class="hide">
+            <br>
+            A jump of 1 creates the jump sequence: 1, 2, 3, 4, 5, etc., meaning it will hit all obstacles.
+            <br>
+            A jump of 2 creates the sequence: 2, 4, 6, 8, 10, etc, meaning it hits the obstacle at coordinate 6.
+            <br>
+            A jump of 3 creates the sequence: 3, 6, 9, 12, 15, etc, meaning it hits the obtacles at coordintes 3, 6, and 9.
+            <br>
+            A jump of 4 creates the sequence: 4, 8, 12, 16, 18, etc, meaning it does not hit any of the obstacles.
+        </p>
         <br>
-        <input id="num" type="number" placeholder="Input whole number">
-        <button id="submit-num" type="submit">Add to Array</button><br>
+        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
+        <br>
+        <form>
+            <label for="num">Array values: </label>
+            <br>
+            <input id="num" type="number" placeholder="Input whole number">
+            <button id="submit-num" class="input-width-btn" type="submit">Add to Array</button><br>
+        </form>
         <p>*Note: Numbers with decimal places will be rounded down.</p>
-        <button id="submit" type="submit">Find Smallest Jump</button>
+        <br>
+        <form>
+            <button id="submit" class="input-width-btn" type="submit">Find Smallest Jump</button>
+        </form>
+        <br><br>
         <h3>Smallest jump to avoid all obstacles: <span id="jump"></span></h3>
     </main>
-    <script type="text/javascript" src ="assets/js/script-11.js"></script>
+    <script type="text/javascript" src="assets/js/script-11.js"></script>
 </body>
     
 </html>
